--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikcraft</title>
+    <link rel="stylesheet" href="/bikcraft/Codigo/css/style.css">
 </head>
 <body>
     Construção
