--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -5,9 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikcraft</title>
+    <link rel="stylesheet" href="/bikcraft/Codigo/css/normalize.css/normalize.css">
+    <link rel="stylesheet" href="/bikcraft/Codigo/css/reset.css">
+    <link rel="stylesheet" href="/bikcraft/Codigo/css/grid.css">
     <link rel="stylesheet" href="/bikcraft/Codigo/css/style.css">
 </head>
-<body>
 
+<body>
+    <header class="header">
+        <div class="container">
+            <a href="index.html" class="grid-4" id="logo-header">Bikcraft</a>
+            <nav class="grid-12 menu-header">
+                <ul>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Produtos</a></li>
+                    <li><a href="#">Portfólio</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
