--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/bikcraft/Codigo/css/normalize.css/normalize.css">
     <link rel="stylesheet" href="/bikcraft/Codigo/css/reset.css">
     <link rel="stylesheet" href="/bikcraft/Codigo/css/grid.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/bikcraft/Codigo/css/style.css">
 </head>
 
@@ -34,9 +36,17 @@
                 <p>Et has minim elitr intellegat. Mea aeterno eleifend antiopam
                     ad, nam no suscipit quaerendum. At nam minimum ponderum.
                     Est audiam animal molestiae te.</p>
-    
-                    <a href="" class="button">Budget</a>
-                    <a href="" class="empty-button">Leam more</a>
+
+                <a href="" class="button">Budget</a>
+                <a href="" class="empty-button">Leam more</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="products">
+        <div class="container">
+            <div class="prod">
+                ..
             </div>
         </div>
     </section>
