--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/bikcraft/Codigo/css/reset.css">
     <link rel="stylesheet" href="/bikcraft/Codigo/css/grid.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/bikcraft/Codigo/css/style.css">
 </head>
 
@@ -46,7 +46,16 @@
     <section class="products">
         <div class="container">
             <div class="prod">
-                ..
+                <h2>Products</h2>
+                <div class="product">
+                    <img src="/bikcraft/Codigo/img/img-produtos.jpg" alt="">
+                    <h3>Add Lorem Ipsum</h3>
+                    <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
+                </div>
+
+                <p>It has survived not only five centuries, but also the leap into electronic typesetting,
+                    remaining essentially unchanged. It was popularised in. </p>
+                <a href="" class="button">Products</a>
             </div>
         </div>
     </section>
