--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -53,6 +53,18 @@
                     <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
                 </div>
 
+                <div class="product">
+                    <img src="/bikcraft/Codigo/img/img-produtos.jpg" alt="">
+                    <h3>Add Lorem Ipsum</h3>
+                    <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
+                </div>
+
+                <div class="product">
+                    <img src="/bikcraft/Codigo/img/img-produtos.jpg" alt="">
+                    <h3>Add Lorem Ipsum</h3>
+                    <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
+                </div>
+
                 <p>It has survived not only five centuries, but also the leap into electronic typesetting,
                     remaining essentially unchanged. It was popularised in. </p>
                 <a href="" class="button">Products</a>
