Page products -  Ok

--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -61,7 +61,7 @@
                         <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
                     </div>
 
-                    <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in.</p>
+                    <p id="">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in.</p>
                     <a href="" class="button">Products</a>
                 </div>
             </div>
