--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -1,70 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Bikcraft</title>
-        <link rel="stylesheet" href="/bikcraft/Codigo/css/normalize.css/normalize.css" />
-        <link rel="stylesheet" href="/bikcraft/Codigo/css/reset.css" />
-        <link rel="stylesheet" href="/bikcraft/Codigo/css/grid.css" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="/bikcraft/Codigo/css/style.css" />
-    </head>
 
-    <body>
-        <header class="header">
-            <div class="container">
-                <a href="index.html" class="grid-4" id="logo-header">Bikcraft</a>
-                <nav class="grid-12 menu-header">
-                    <ul>
-                        <li><a href="#">Sobre</a></li>
-                        <li><a href="#">Produtos</a></li>
-                        <li><a href="#">Portfólio</a></li>
-                        <li><a href="#">Contato</a></li>
-                    </ul>
-                </nav>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bikcraft</title>
+    <link rel="stylesheet" href="/bikcraft/Codigo/css/normalize.css/normalize.css" />
+    <link rel="stylesheet" href="/bikcraft/Codigo/css/reset.css" />
+    <link rel="stylesheet" href="/bikcraft/Codigo/css/grid.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+
+    <link rel="stylesheet" href="/bikcraft/Codigo/css/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+    <header class="header">
+        <div class="container">
+            <a href="index.html" class="grid-4" id="logo-header">Bikcraft</a>
+            <nav class="grid-12 menu-header">
+                <ul>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Produtos</a></li>
+                    <li><a href="#">Portfólio</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section class="introduction">
+        <div class="container">
+            <div class="intro">
+                <h1>Simplify your online for free this month!</h1>
+                <p>Et has minim elitr intellegat. Mea aeterno eleifend antiopam ad, nam no suscipit quaerendum. At nam
+                    minimum ponderum. Est audiam animal molestiae te.</p>
+
+                <a href="" class="button">Budget</a>
+                <a href="" class="empty-button">Leam more</a>
             </div>
-        </header>
+        </div>
+    </section>
 
-        <section class="introduction">
-            <div class="container">
-                <div class="intro">
-                    <h1>Simplify your online for free this month!</h1>
-                    <p>Et has minim elitr intellegat. Mea aeterno eleifend antiopam ad, nam no suscipit quaerendum. At nam minimum ponderum. Est audiam animal molestiae te.</p>
-
-                    <a href="" class="button">Budget</a>
-                    <a href="" class="empty-button">Leam more</a>
+    <section class="products">
+        <div class="container">
+            <div class="prod">
+                <h2>Products</h2>
+                <div class="product">
+                    <img src="/bikcraft/Codigo/img/img-produtos.jpg" alt="" />
+                    <h3>Add Lorem Ipsum</h3>
+                    <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
                 </div>
-            </div>
-        </section>
 
-        <section class="products">
-            <div class="container">
-                <div class="prod">
-                    <h2>Products</h2>
-                    <div class="product">
-                        <img src="/bikcraft/Codigo/img/img-produtos.jpg" alt="" />
-                        <h3>Add Lorem Ipsum</h3>
-                        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
-                    </div>
-
-                    <div class="product">
-                        <img src="/bikcraft/Codigo/img/img-produtos.jpg" alt="" />
-                        <h3>Add Lorem Ipsum</h3>
-                        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
-                    </div>
-
-                    <div class="product">
-                        <img src="/bikcraft/Codigo/img/img-produtos.jpg" alt="" />
-                        <h3>Add Lorem Ipsum</h3>
-                        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
-                    </div>
-
-                    <p id="">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in.</p>
-                    <a href="" class="button">Products</a>
+                <div class="product">
+                    <img src="/bikcraft/Codigo/img/img-produtos.jpg" alt="" />
+                    <h3>Add Lorem Ipsum</h3>
+                    <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
                 </div>
+
+                <div class="product">
+                    <img src="/bikcraft/Codigo/img/img-produtos.jpg" alt="" />
+                    <h3>Add Lorem Ipsum</h3>
+                    <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
+                </div>
+
+                <p id="">It has survived not only five centuries, but also the leap into electronic typesetting,
+                    remaining essentially unchanged. It was popularised in.</p>
+                <a href="" class="button">Products</a>
             </div>
-        </section>
-    </body>
+        </div>
+    </section>
+
+
+    <section class="portifolio">
+        <div class="container">
+            <div class="portif">
+                <img src="/bikcraft/Codigo/img/portifolio (1).jpg" alt="">
+                <img src="/bikcraft/Codigo/img/portifolio (2).jpg" alt="">
+                <img src="/bikcraft/Codigo/img/portifolio (3).jpg" alt="">
+                <img src="/bikcraft/Codigo/img/portifolio (4).jpg" alt="">
+            </div>
+        </div>
+    </section>
+</body>
+
 </html>
