Page Portifólio -  ok

--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -64,7 +64,7 @@
                     <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
                 </div>
 
-                <p id="">It has survived not only five centuries, but also the leap into electronic typesetting,
+                <p>It has survived not only five centuries, but also the leap into electronic typesetting,
                     remaining essentially unchanged. It was popularised in.</p>
                 <a href="" class="button">Products</a>
             </div>
@@ -75,10 +75,14 @@
     <section class="portifolio">
         <div class="container">
             <div class="portif">
+                <h2>Portifolio</h2>
                 <img src="/bikcraft/Codigo/img/portifolio (1).jpg" alt="">
                 <img src="/bikcraft/Codigo/img/portifolio (2).jpg" alt="">
                 <img src="/bikcraft/Codigo/img/portifolio (3).jpg" alt="">
                 <img src="/bikcraft/Codigo/img/portifolio (4).jpg" alt="">
+                <p>It has survived not only five centuries, but also the leap into electronic typesetting,
+                    remaining essentially unchanged. It was popularised in.</p>
+                <a href="" class="button">Portifólio</a>
             </div>
         </div>
     </section>
