Page Portfólio -  ok

--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -21,8 +21,8 @@
             <nav class="grid-12 menu-header">
                 <ul>
                     <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Produtos</a></li>
-                    <li><a href="#">Portfólio</a></li>
+                    <li><a href="products.html">Produtos</a></li>
+                    <li><a href="portfolio.html">Portfólio</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
@@ -66,23 +66,23 @@
 
                 <p>It has survived not only five centuries, but also the leap into electronic typesetting,
                     remaining essentially unchanged. It was popularised in.</p>
-                <a href="" class="button">Products</a>
+                <a href="products.html" class="button">Products</a>
             </div>
         </div>
     </section>
 
 
-    <section class="portifolio">
+    <section class="portfolio">
         <div class="container">
             <div class="portif">
-                <h2>Portifolio</h2>
+                <h2>Portfólio</h2>
                 <img src="/bikcraft/Codigo/img/portifolio (1).jpg" alt="">
                 <img src="/bikcraft/Codigo/img/portifolio (2).jpg" alt="">
                 <img src="/bikcraft/Codigo/img/portifolio (3).jpg" alt="">
                 <img src="/bikcraft/Codigo/img/portifolio (4).jpg" alt="">
                 <p>It has survived not only five centuries, but also the leap into electronic typesetting,
                     remaining essentially unchanged. It was popularised in.</p>
-                <a href="" class="button">Portifólio</a>
+                <a href="portfolio.html" class="button">Portifólio</a>
             </div>
         </div>
     </section>
