--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -86,6 +86,12 @@
             </div>
         </div>
     </section>
+
+    <section class="quality">
+        <div class="container">
+            Qualiodadiiiiiiiiiiiiiiiiiiiiiiiiii
+        </div>
+    </section>
 </body>
 
 </html>
