--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +8,6 @@
     <link rel="stylesheet" href="/bikcraft/Codigo/css/reset.css" />
     <link rel="stylesheet" href="/bikcraft/Codigo/css/grid.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-
     <link rel="stylesheet" href="/bikcraft/Codigo/css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet" />
 </head>
@@ -51,26 +49,22 @@
                     <h3>Add Lorem Ipsum</h3>
                     <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
                 </div>
-
                 <div class="product">
                     <img src="/bikcraft/Codigo/img/img-produtos.jpg" alt="" />
                     <h3>Add Lorem Ipsum</h3>
                     <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
                 </div>
-
                 <div class="product">
                     <img src="/bikcraft/Codigo/img/img-produtos.jpg" alt="" />
                     <h3>Add Lorem Ipsum</h3>
                     <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
                 </div>
-
                 <p>It has survived not only five centuries, but also the leap into electronic typesetting,
                     remaining essentially unchanged. It was popularised in.</p>
                 <a href="products.html" class="button">Products</a>
             </div>
         </div>
     </section>
-
 
     <section class="portfolio">
         <div class="container">
@@ -89,7 +83,22 @@
 
     <section class="quality">
         <div class="container">
-            Qualiodadiiiiiiiiiiiiiiiiiiiiiiiiii
+            <div class="qa">
+                <h2>Qualidade</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book.
+                    <br> <br>
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
+                    containing Lorem Ipsum passages.
+                </p>
+
+                <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
+                    containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+                    PageMaker including versions of Lorem Ipsum.</p>
+            </div>
         </div>
     </section>
 </body>
