--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -98,9 +99,30 @@
                     essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
                     containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
                     PageMaker including versions of Lorem Ipsum.</p>
+            </div> 
+            <div class="qua">
+                <h2>Bikcraft</h2>
+                <ul>
+                    <li class="grid-1-3">
+                        <h3>Durabilidade</h3>
+                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                    </li>
+                    <li class="grid-1-3">
+                        <h3>Design</h3>
+                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                    </li>
+                    <li class="grid-1-3">
+                        <h3>Sustentabilidade</h3>
+                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                    </li>
+                </ul>
+
+                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                     when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <a href="contato.html" class="button">Orçamento</a>
             </div>
         </div>
     </section>
 </body>
-
 </html>
