--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -60,8 +60,8 @@
                     <h3>Add Lorem Ipsum</h3>
                     <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.</p>
                 </div>
-                <p>It has survived not only five centuries, but also the leap into electronic typesetting,
-                    remaining essentially unchanged. It was popularised in.</p>
+                <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially unchanged. It was popularised in.</p>
                 <a href="products.html" class="button">Products</a>
             </div>
         </div>
@@ -71,58 +71,61 @@
         <div class="container">
             <div class="portif">
                 <h2>Portfólio</h2>
-                <img src="/bikcraft/Codigo/img/portifolio (1).jpg" alt="">
-                <img src="/bikcraft/Codigo/img/portifolio (2).jpg" alt="">
-                <img src="/bikcraft/Codigo/img/portifolio (3).jpg" alt="">
-                <img src="/bikcraft/Codigo/img/portifolio (4).jpg" alt="">
-                <p>It has survived not only five centuries, but also the leap into electronic typesetting,
-                    remaining essentially unchanged. It was popularised in.</p>
+                <img src="/bikcraft/Codigo/img/portifolio (1).jpg" alt="" />
+                <img src="/bikcraft/Codigo/img/portifolio (2).jpg" alt="" />
+                <img src="/bikcraft/Codigo/img/portifolio (3).jpg" alt="" />
+                <img src="/bikcraft/Codigo/img/portifolio (4).jpg" alt="" />
+                <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially unchanged. It was popularised in.</p>
                 <a href="portfolio.html" class="button">Portifólio</a>
             </div>
         </div>
     </section>
 
-    <section class="quality">
-        <div class="container">
-            <div class="qa">
-                <h2>Qualidade</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
-                    <br> <br>
-                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                    essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
-                    containing Lorem Ipsum passages.
-                </p>
+    <section class="quality container">
+        <h2>Qualidade</h2>
+        <div class="qa">
+            
+            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to
+                make a type specimen book. <br /><br />
+                It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+                Lorem Ipsum
+                passages.</p>
 
-                <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                    essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
-                    containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-                    PageMaker including versions of Lorem Ipsum.</p>
-            </div> 
-            <div class="qua">
-                <h2>Bikcraft</h2>
-                <ul>
-                    <li class="grid-1-3">
-                        <h3>Durabilidade</h3>
-                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-                    </li>
-                    <li class="grid-1-3">
-                        <h3>Design</h3>
-                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-                    </li>
-                    <li class="grid-1-3">
-                        <h3>Sustentabilidade</h3>
-                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-                    </li>
-                </ul>
+            <p> It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+                Lorem Ipsum
+                passages, and more recently with desktop publishing software like Aldus PageMaker including versions of
+                Lorem Ipsum. </p>
+        </div>
+            <h2 id="logo-quality">Bikcraft</h2>
+            <ul>
+                <li class="grid-1-3">
+                    <h3>Durabilidade</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </li>
+                <li class="grid-1-3">
+                    <h3>Design</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </li>
+                <li class="grid-1-3">
+                    <h3>Sustentabilidade</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </li>
+            </ul>
 
-                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                     when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <a href="contato.html" class="button">Orçamento</a>
-            </div>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to
+                make a type specimen book.
+            </p>
+            <a href="contato.html" class="button">Orçamento</a>
         </div>
     </section>
 </body>
+
 </html>
