--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -101,6 +101,7 @@
                 passages, and more recently with desktop publishing software like Aldus PageMaker including versions of
                 Lorem Ipsum. </p>
         </div>
+
             <h2 id="logo-quality">Bikcraft</h2>
             <ul>
                 <li class="grid-1-3">
@@ -123,8 +124,10 @@
                 scrambled it to
                 make a type specimen book.
             </p>
-            <a href="contato.html" class="button">Orçamento</a>
-        </div>
+           <div class="btn">
+             <a href="contato.html" class="button">Orçamento</a>
+           </div> 
+       
     </section>
 </body>
 
