--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -129,6 +129,15 @@
            </div> 
        
     </section>
+
+   <section class="citacao container">
+    <blockquote>
+        <p>"O verdadeiro segredo da felicidade está em ter <br>
+         um genuíno interesse por todos os detalhes da 
+         vida cotidiana"</p>
+        <cite>William Morris</cite>
+    </blockquote>
+   </section>
 </body>
 
 </html>
