--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -138,6 +138,23 @@
         <cite>William Morris</cite>
     </blockquote>
    </section>
+
+   <footer class="footer">
+       <div class="container">
+        <div class="logo-footer">
+            <h2>Bikcraft</h2>
+            <p>Eu augue ut lectus 
+              arcu bibendum at.</p>
+          </div>
+          <div class="content">
+
+          </div>
+          
+       </div>
+     <div class="rodape">
+         ......
+     </div>
+   </footer>
 </body>
 
 </html>
