--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -141,7 +141,7 @@
 
    <footer class="footer">
        <div class="container">
-        <div class="logo-footer">
+        <div class="grid-8">
             <h2>Bikcraft</h2>
             <p>Eu augue ut lectus 
               arcu bibendum at.</p>
@@ -152,7 +152,7 @@
           
        </div>
      <div class="rodape">
-         ......
+         <p>© 2020 Bikcraft by fredericoespeschit. All right reserved.</p>
      </div>
    </footer>
 </body>
