--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -141,15 +141,39 @@
 
    <footer class="footer">
        <div class="container">
-        <div class="grid-8">
+        <div class="grid-6">
             <h2>Bikcraft</h2>
             <p>Eu augue ut lectus 
               arcu bibendum at.</p>
           </div>
-          <div class="content">
-
+          <div class="menu grid-2">
+            <ul>
+                <li><a href="">Sobre</a></li>
+                <li><a href="">Produtos</a></li>
+                <li><a href="">Portifolio</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Contato</a></li>
+            </ul>
           </div>
-          
+          <div class="service grid-2">
+            <li><a href="">Lorem</a></li>
+            <li><a href="">Ipsum</a></li>
+            <li><a href="">Dolor</a></li>
+            <li><a href="">Sit Amet</a></li>
+          </div>
+          <div class="contact-us grid-2">
+             <a href=""><img src="" alt=""> contact@lop.com</a>
+             <a href=""><img src="" alt=""> 999-999-99</a>
+          </div>
+          <div class="follow-us grid-4">
+              <a href=""><img src="" alt="">re1</a>
+              <a href=""><img src="" alt="">re2</a>
+              <a href=""><img src="" alt="">re3</a>
+              <a href=""><img src="" alt="">re4</a>
+              <a href=""><img src="" alt="">re5</a>
+              <a href=""><img src="" alt="">re6</a>
+              <a href=""><img src="" alt="">re7</a>
+          </div>
        </div>
      <div class="rodape">
          <p>© 2020 Bikcraft by fredericoespeschit. All right reserved.</p>
